[package]
name = "p2p-network"
version = "0.1.0"
authors = ["Elena Frank <elena.frank@protonmail.com>"]
license = "Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libp2p = {version="0.37", path="../rust-libp2p", default-features =  false, features = [
    "dns-async-std",
    "kad",
    "gossipsub",
    "mdns",
    "noise",
    "tcp-async-io",
    "yamux",
]}
serde = { version = "1.0.117", default-features = false, features = [ "alloc", "derive" ] }
serde_json = { version = "1.0.59", default-features = false, features = [ "alloc" ] }
regex = "1.4.5"
futures = "0.3.13"
